<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/register_bg"
    android:padding="@dimen/sixteen_dp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivClose"
        style="@style/cross_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/close" />

    <TextView
        android:id="@+id/tvForgotPasswdHeading"
        style="@style/heading_text_view"
        android:layout_marginTop="@dimen/eight_dp"
        android:text="@string/update_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etOldPassword"
        style="@style/edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/old_password"
        android:inputType="textMultiLine"
        android:textColorHint="@color/edit_text_hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivEmail"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPasswdHeading" />

    <ImageView
        android:id="@+id/ivEmail"
        android:layout_width="@dimen/thirty_dp"
        android:visibility="gone"
        android:layout_height="0dp"
        android:background="@color/edit_text_bg_color"
        android:src="@drawable/message"
        app:layout_constraintBottom_toBottomOf="@+id/etOldPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etOldPassword"></ImageView>


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        style="@style/edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textMultiLine"
        android:textColorHint="@color/edit_text_hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etOldPassword" />

    <TextView
        android:id="@+id/tvUpdate"
        style="@style/main_action_button"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:text="@string/submit"
        android:paddingRight="@dimen/thirty_dp"
        android:paddingLeft="@dimen/thirty_dp"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"></TextView>


</androidx.constraintlayout.widget.ConstraintLayout>