<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="clickEvents"
            type="com.mjdistillers.drinkthedrink.dialogs.FeedbackDialog.FeedbackClickEvents" />

    </data>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/sixteen_dp"
    android:background="@drawable/register_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivClose"
        style="@style/cross_button"
        android:onClick="@{(view)-> clickEvents.onClickClose(view)}"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/close" />



    <TextView
        android:id="@+id/tvWanttohear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:layout_marginTop="32dp"
        android:text="@string/contact"

        android:textSize="@dimen/TEXT_EXTRA_LARGE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSubHeading"
        android:layout_width="0dp"
        android:textColor="@color/text_color_black"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="@dimen/TEXT_SIZE_LARGE"
        android:text="@string/contact_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWanttohear" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/edit_text_bg_color"
        app:layout_constraintRight_toRightOf="@+id/etComments"
        app:layout_constraintLeft_toLeftOf="@+id/etComments"
        app:layout_constraintTop_toTopOf="@id/tvMessage"
        app:layout_constraintBottom_toBottomOf="@+id/tvMessage"
        >

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/ivMessage"
        android:layout_width="25dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/tvMessage"
        app:layout_constraintBottom_toBottomOf="@id/tvMessage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/message"
        android:scaleType="fitEnd"
        android:layout_marginRight="@dimen/two_dp"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintRight_toLeftOf="@id/tvMessage"
        app:layout_constraintHorizontal_chainStyle="packed"></ImageView>

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textSize="@dimen/TEXT_SIZE_NORMAL"
        android:gravity="center_vertical"
        android:textColor="@color/text_color"
        android:layout_marginLeft="@dimen/four_dp"
        android:layout_marginTop="@dimen/thirty_dp"
        app:layout_constraintRight_toLeftOf="@+id/ivNotifications_"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintLeft_toRightOf="@id/ivMessage"
        app:layout_constraintTop_toBottomOf="@+id/tvSubHeading"
        app:layout_constraintBottom_toTopOf="@id/etComments">
    </TextView>

    
    <EditText
        android:id="@+id/etComments"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColorHint="@color/edit_text_hint_color"
        android:lines="5"
        style="@style/edit_text"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/tvMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <TextView
        android:id="@+id/tvSubmitFeedback"
        style="@style/main_action_button"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:onClick="@{(view)-> clickEvents.onClickFeedback(view)}"
        android:text="@string/send"
        android:paddingRight="@dimen/twenty_four"
        android:paddingLeft="@dimen/twenty_four"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/etComments"
        app:layout_constraintRight_toRightOf="parent"
        ></TextView>



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>